--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "wordgameapi",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Demesheo/WordGameApi#readme",
   "dependencies": {
+    "aws-sdk": "^2.213.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "unirest": "^0.5.1"
