--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Demesheo/WordGameApi#readme",
   "dependencies": {
     "aws-sdk": "^2.213.1",
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "unirest": "^0.5.1"
